--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,10 @@ name: Deploy to GitHub Pages
 
 # Run workflow on every push to the master branch
 on:
-  push:
-    branches: [ main ]
-
+  workflow_dispatch:
+#  push:
+#    branches: [ main ]
+  
 jobs:
   deploy-to-github-pages:
     # use ubuntu-latest image to run steps on
